UPDATE: mobile nav alignment fixed

--- a/app/style/_hero.scss
+++ b/app/style/_hero.scss
@@ -97,7 +97,7 @@ nav {
    .mobile-nav {
       @include flex;
       position: absolute;
-      right: 0%;
+      right: 1.5rem;
    }
 
    .mobile-nav>img {
